@@ -21,7 +21,6 @@ import java.util.Date;
 import java.util.GregorianCalendar;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.tuple.Pair;
 import org.kitodo.production.helper.Helper;
@@ -460,7 +459,7 @@ public class Block {
      * @return 'true' if duplicates are found anf 'false' if not.
      */
     public boolean checkIssuesWithSameHeading() {
-        List<String> issuesTitles = issues.stream().map(Issue::getHeading).collect(Collectors.toList());
+        List<String> issuesTitles = issues.stream().map(Issue::getHeading).toList();
         List<String> titles = new ArrayList<>();
         for (String title : issuesTitles) {
             if (titles.contains(title)) {
